uprava api
